--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,9 +7,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Explore a web app filled with learning opportunities on the topics of United Nations' goals. Gain access to a wide range of courses that will help you understand and take action on the sustainable development goals. Utilize this interactive platform to acquire essential knowledge, develop skills, and connect with experts and enthusiasts from around the world. Get ready to make a difference: start your learning journey today!"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title> My Impact | SDG for everyone</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
